Update HTML files with logo images and favicon; enhance CSS styles and add theme toggle script

--- a/about.html
+++ b/about.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Infinity Creations</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="images/favicon.png.png" type="image/x-icon">
 </head>
 <body>
   <header>
-    <div class="logo">Infinity Creations</div>
+    <div class="logo">
+      <img src="images/Logo.png.png" alt="Infinity Creations Logo" width="170" height="98">
+    </div>
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
@@ -29,20 +32,12 @@
     <p>Infinity Creations was born from the idea that design should inspire and empower. Founded by a team of passionate creatives, we specialize in transforming concepts into stunning digital and print realities. Our journey began with a mission to help brands find their voice and express it boldly through powerful visuals and strategic storytelling.</p>
 
     <h2>Meet the Team</h2>
-    <div class="team">
+    <div class="team-member">
       <div class="card">
-        <h3>Jane Doe</h3>
-        <p>Creative Director</p>
+        <h3>Theophilus Dartey</h3>
+        <img src="images/Kay.jpg" alt="Theophilus Dartey">
+        <p>C.E.O <br> Creative Director</p>
       </div>
-      <div class="card">
-        <h3>John Smith</h3>
-        <p>Lead Developer</p>
-      </div>
-      <div class="card">
-        <h3>Sofia Lee</h3>
-        <p>Brand Strategist</p>
-      </div>
-    </div>
   </section>
 
   <footer>
