--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon.png.png" type="image/x-icon">
 </head>
 <body>
   <header>
-    <div class="logo">Infinity Creations</div>
+    <div class="logo">
+      <img src="images/Logo.png.png" alt="Infinity Creations Logo" width="170" height="98">
+    </div>
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
@@ -41,12 +44,12 @@
     </div>
     <div class="card">
       <h3>Responsive Web Design</h3>
-      <img src="images/Responsive Web Design.jpg" alt="Responsive Web Design" width="475" height="220">
+      <img src="images/Responsive web design.png" alt="Responsive Web Design" width="475" height="220">
       <p>Modern websites optimized for all devices and user experiences.</p>
     </div>
     <div class="card">
       <h3>Digital Campaigns</h3>
-      <img src="images/Digital Campaigns.jpg" alt="Digital Campaigns" width="475" height="220">
+      <img src="images/Digital campaigns.png" alt="Digital Campaigns" width="475" height="220">
       <p>Drive engagement with powerful, conversion-focused marketing assets.</p>
     </div>
   </section>
