--- a/services.html
+++ b/services.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Services - Infinity Creations</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="images/favicon.png.png" type="image/x-icon">
 </head>
 <body>
   <header>
-    <div class="logo">Infinity Creations</div>
+    <div class="logo">
+      <img src="images/Logo.png.png" alt="Infinity Creations Logo" width="170" height="98">
+    </div>
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
