Add Google Analytics tracking, improve SEO with meta tags, and update favicon; remove unused JavaScript file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Infinity Creations</title>
+  <meta name="description"
+    content="Infinity Creations is a modern graphic design studio creating stunning visuals, branding, and digital experiences." />
+  <meta name="keywords" content="graphic design, branding, logos, digital art, Infinity Creations, creative studio" />
+  <meta name="author" content="Infinity Creations" />
+  <meta property="og:title" content="Infinity Creations | Graphic Design Studio" />
+  <meta property="og:description" content="Stunning visuals and branding solutions by Infinity Creations." />
+  <meta property="og:image" content="https://theokay21.github.io/infinity-creations/images/og-preview.jpg" />
+  <meta property="og:url" content="https://theokay21.github.io/infinity-creations/" />
+  <meta property="og:type" content="website" />
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.png.png" type="image/x-icon">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2V49JYNX41"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2V49JYNX41');
+  </script>
 </head>
 <body>
   <header>
