--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.png.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2V49JYNX41"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2V49JYNX41');
+  </script>
 </head>
 <body>
   <header>
@@ -20,6 +31,7 @@
       <a href="about.html">About</a>
       <a href="contact.html" class="active">Contact</a>
     </nav>
+    <button class="toggle-theme" aria-label="Toggle Theme">🌓</button>
   </header>
 
   <section class="hero">
