--- a/services.html
+++ b/services.html
@@ -6,6 +6,17 @@
   <title>Our Services - Infinity Creations</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="images/favicon.png.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2V49JYNX41"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2V49JYNX41');
+  </script>
 </head>
 <body>
   <header>
