--- a/about.html
+++ b/about.html
@@ -10,6 +10,13 @@
 
   gtag('config', 'G-XNDY1JENE7');
 </script>
+<script type="text/javascript">
+  var _iub = _iub || [];
+  _iub.csConfiguration = { "siteId": 4047538, "cookiePolicyId": 51647486, "lang": "en", "storage": { "useSiteId": true } };
+</script>
+<script type="text/javascript" src="https://cs.iubenda.com/autoblocking/4047538.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Infinity Creations</title>
